crates/markdown-neuraxis-engine/tests/snapshots/parsing_snapshots__combos__simple_paragraph.snap
---
source: crates/markdown-neuraxis-engine/tests/parsing_snapshots.rs
expression: snap
---
blocks:
  - kind: Paragraph
    span:
      - 0
      - 28
    containers: []
    text: "This is a simple paragraph.\n"
    inline:
      - kind: Text
        span:
          - 0
          - 28
        text: "This is a simple paragraph.\n"
        parts: {}
